triggers/gloo/event-listener-route.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: el-gitea-webhook-http
  namespace: gloo-system
spec:
  virtualHost:
    domains:
      - el-gitea-webhook-${GLOO_GATEWAY_PROXY_IP}.nip.io
      - ${GLOO_GATEWAY_PROXY_IP}
    routes:
      - matchers:
          - prefix: /
        routeAction:
          single:
            upstream:
              name: default-el-gitea-webhook-8080
              namespace: gloo-system
